// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCoverage function accepts a tsProjectFile option 1`] = `
{
  "anys": [],
  "covered": 100,
  "fileCounts": Map {
    "index.html" => {
      "correctCount": 100,
      "totalCount": 100,
    },
  },
  "percentage": 100,
  "total": 100,
  "uncovered": 0,
}
`;

exports[`getCoverage function accepts a tsProjectFile option 2`] = `
[
  [
    "./app/tsconfig.json",
    {
      "debug": undefined,
      "enableCache": undefined,
      "fileCounts": true,
      "files": undefined,
      "ignoreCatch": undefined,
      "ignoreFiles": undefined,
      "ignoreUnreadAnys": undefined,
      "strict": undefined,
    },
  ],
]
`;

exports[`getCoverage function defaults to root project when tsProjectFile is not passed 1`] = `
[
  [
    ".",
    {
      "debug": undefined,
      "enableCache": undefined,
      "fileCounts": true,
      "files": undefined,
      "ignoreCatch": undefined,
      "ignoreFiles": undefined,
      "ignoreUnreadAnys": undefined,
      "strict": undefined,
    },
  ],
]
`;

exports[`getCoverage function returns calculated data from type-coverage-core 1`] = `
{
  "anys": [],
  "covered": 100,
  "fileCounts": Map {
    "index.html" => {
      "correctCount": 100,
      "totalCount": 100,
    },
  },
  "percentage": 100,
  "total": 100,
  "uncovered": 0,
}
`;
